--- a/sql/接口.yaml
+++ b/sql/接口.yaml
@@ -767,9 +767,173 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/attentions:
+    post:
+      summary: 创建或更新关注记录
+      description: |
+        用于创建新的关注记录，如果name已存在，则更新该记录的times字段。
+        type字段必须是"company"、"industry"或"product"之一。
+      tags:
+        - Attention
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AttentionDTO'
+            example:
+              name: "AAPL"
+              type: "company"
+              times: 1
+      responses:
+        '200':
+          description: 操作成功，返回影响的行数。
+          content:
+            text/plain:
+              schema:
+                type: integer
+                example: 1
+        '400':
+          description: 请求参数错误或格式不正确。
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: 服务器内部错误。
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+    get:
+      summary: 分页查询关注记录
+      description: 根据类型分页查询关注记录列表。
+      tags:
+        - Attention
+      parameters:
+        - name: type
+          in: query
+          description: 类型 (company, industry, product)
+          required: true
+          schema:
+            type: string
+            enum: ["company", "industry", "product"]
+            example: "company"
+        - name: pageNum
+          in: query
+          description: 页码 (从1开始)
+          required: true
+          schema:
+            type: integer
+            default: 1
+            example: 1
+        - name: pageSize
+          in: query
+          description: 每页大小
+          required: true
+          schema:
+            type: integer
+            default: 10
+            example: 10
+      responses:
+        '200':
+          description: 查询成功，返回分页结果。
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PageResultAttention'
+              example:
+                records:
+                  - id: 1
+                    name: "AAPL"
+                    type: "company"
+                    createTime: "2025-11-06T10:00:00"
+                    updateTime: "2025-11-06T10:30:00"
+                    times: 5
+                  - id: 2
+                    name: "GOOGL"
+                    type: "company"
+                    createTime: "2025-11-06T09:15:00"
+                    updateTime: "2025-11-06T09:45:00"
+                    times: 3
+                total: 2
+                pageNum: 1
+                pageSize: 10
+                pages: 1
+        '400':
+          description: 请求参数错误。
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: 服务器内部错误。
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 
 components:
   schemas:
+    AttentionDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: 记录的唯一ID (由数据库自动生成)
+          example: 1
+        name:
+          type: string
+          description: 名称
+          example: "AAPL"
+        type:
+          type: string
+          description: 类型 (company, industry, product)
+          enum: [ "company", "industry", "product" ]
+          example: "company"
+        createTime:
+          type: string
+          format: date-time
+          description: 创建时间
+          example: "2025-11-06T10:00:00"
+        updateTime:
+          type: string
+          format: date-time
+          description: 更新时间
+          example: "2025-11-06T10:30:00"
+        times:
+          type: integer
+          description: 关注次数
+          example: 5
+      required:
+        - name
+        - type
+
+    PageResultAttention:
+      type: object
+      properties:
+        records:
+          type: array
+          items:
+            $ref: '#/components/schemas/AttentionDTO'
+        total:
+          type: integer
+          format: int64
+          description: 总记录数
+          example: 2
+        pageNum:
+          type: integer
+          description: 当前页码
+          example: 1
+        pageSize:
+          type: integer
+          description: 每页大小
+          example: 10
+        pages:
+          type: integer
+          description: 总页数
+          example: 1
     DailyRecordWithCommentsDTO:
       type: object
       properties:
